--- a/src/assets/css/partials/_pg-about.scss
+++ b/src/assets/css/partials/_pg-about.scss
@@ -1,41 +1,14 @@
 
-
-.section-header {
-    max-width: 100%;
-    padding: 32px 16px 0px 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-
-    .button {
-        display: inline-block;
-        text-decoration: none;
-        color: #2A2A2A;
-    }
-}
-
 #about-section {
     padding-top: 64px;
     background-color: #FAFAFA;
     width: 100%;
 
-    h2 {
-        font-family: 'NeueMontreal';
-        font-weight: normal;
-        display: inline-block;
-        font-size: 2rem;
-        line-height: 1.5;
-        margin-bottom: 30px;
-    }
-    
     p {
-        font-family: 'NeueMontreal';
         font-size: 1.125rem;
         font-style: 100;
         font-weight: 400;
-        line-height: 150%; /* 1.875rem */
+        line-height: 150%;
 
     }
 
@@ -47,13 +20,13 @@
     }
 
     img {
-        border-radius: 8px;
+        border-radius: var(--radius-s);
     }
 }
 
 #about-content {
     display: flex;
-    padding: 0rem 1rem 3rem 1rem;
+    padding: 0 var(--space-s) var(--space-xxl) var(--space-s);
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
