--- a/src/assets/css/partials/_content.scss
+++ b/src/assets/css/partials/_content.scss
@@ -187,6 +187,11 @@ html {
 
 body {
     margin: 0 auto;
+    min-height: 100vh;
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    
     background-color: var(--clr-bg-pri);
 
     font-family: var(--font-body);
@@ -213,7 +218,7 @@ section {
         flex-direction: row;
         justify-content: space-between;
         align-items: baseline;
-        padding: 0 var(--space-xs);
+        padding: 0 var(--space-m);
     }
 
     a {
