--- a/src/assets/css/partials/_pg-about.scss
+++ b/src/assets/css/partials/_pg-about.scss
@@ -1,7 +1,6 @@
 
 #about-section {
-    padding-top: 64px;
-    background-color: #FAFAFA;
+    margin-top: var(--space-xxxl);
     width: 100%;
 
     p {
@@ -24,12 +23,21 @@
     }
 }
 
+
 #about-content {
     display: flex;
-    padding: 0 var(--space-s) var(--space-xxl) var(--space-s);
+    padding: var(--space-xl) var(--space-s) var(--space-xxl) var(--space-s);
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem;
+    gap: var(--space-s);
+    align-self: stretch;
+}
+
+#about-details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--space-s);
     align-self: stretch;
 }
 
@@ -43,5 +51,33 @@
     justify-content: center;
     align-items: flex-start;
     gap: 1rem;
+}
+
+@media (min-width: 900px) {
+
+
+    #about-content {
+        display: grid;
+        grid-template-columns: 4fr 6fr;
+        grid-template-rows: 1fr;
+        align-items: center;
+        gap: 20px;
+
+            #about-details {
+                max-width: 500px;
+                height: 100%;
+                justify-content: space-between;
+            }
+    }
+    
+    #about-picture {
+    display: inline-block;
+    }
+
+    #about-links {
+        flex-direction: row;
+        gap: var(--space-xs);
+    }
+
 }
 
