--- a/src/assets/css/partials/_pg-work.scss
+++ b/src/assets/css/partials/_pg-work.scss
@@ -1,17 +1,3 @@
-
-
-.section-header {
-    max-width: 100%;
-    padding: 32px 16px 0px 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-
-    .button {
-        display: inline-block;
-        text-decoration: none;
-        color: #2A2A2A;
-    }
+#work-section {
+    margin-top: var(--space-xxxl);
 }
