Updated case study images

--- a/src/assets/css/partials/_content.scss
+++ b/src/assets/css/partials/_content.scss
@@ -12,6 +12,13 @@ img {
     height: auto;
 }
 
+figure {
+    margin-block-end: 0;
+    margin-block-start: 0;
+    margin-inline-end: 0;
+    margin-inline-start: 0;
+}
+
 .forSR {
     display: none;
 }
