--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -3,9 +3,11 @@
 @import
     "partials/content",
     "partials/fonts",
+    "partials/mediaqueries",
 
     "partials/header",
     "partials/footer",
+    "partials/back-to-top",
 
 
     "partials/pg-work",
