--- a/src/assets/css/partials/_pg-about.scss
+++ b/src/assets/css/partials/_pg-about.scss
@@ -76,6 +76,8 @@
 
     #about-links {
         flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
         gap: var(--space-xs);
     }
 
