--- a/src/assets/css/_footer.css
+++ b/src/assets/css/_footer.css
@@ -1,85 +1,12 @@
 footer {
-  background: #EEE;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
-}
-
-#footer-content {
-  display: None;
-  padding: 32px 16px 16px 16px;
-}
-#footer-content ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  gap: 16px;
-  -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
-  -webkit-margin-after: 0px;
-          margin-block-end: 0px;
-  -webkit-margin-before: 0px;
-          margin-block-start: 0px;
-  -webkit-padding-start: 0px;
-          padding-inline-start: 0px;
-}
-#footer-content li {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-#footer-content a {
-  color: #000;
-  font-family: "NeueMontreal";
-  text-decoration: none;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 150%; /* 1.875rem */
-}
-#footer-content .material-symbols-outlined {
-  bottom: -10px;
+  margin-top: auto;
+  background: var(--clr-bg-sec);
 }
 
 #footer-copyright {
-  padding: 16px;
+  padding: var(--space-s) 0;
 }
 #footer-copyright p {
-  color: #2A2A2A;
-  font-family: "NeueMontreal";
-  font-size: 0.875rem;
-  font-style: normal;
+  font-size: var(--type-s);
   font-weight: 500;
-  line-height: 150%; /* 1.3125rem */
-  letter-spacing: -0.00875rem;
 }
