--- a/src/assets/css/_header.css
+++ b/src/assets/css/_header.css
@@ -1,3 +1,4 @@
+/*------------------------------------------ Desktop Navigation ------------------------------------- */
 #main-header {
   top: 0;
   left: 0;
@@ -28,10 +29,14 @@
       -ms-grid-row-align: stretch;
       align-self: stretch;
 }
-#main-header nav {
+#main-header #main-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -42,55 +47,53 @@
       -ms-grid-row-align: stretch;
       align-self: stretch;
 }
-#main-header nav ul {
+#main-header #main-nav .logo {
+  z-index: 1001;
+}
+#main-header #main-nav ul {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: var(--space-xs);
   padding: 0;
   margin: 0;
 }
-#main-header nav ul li {
+#main-header #main-nav ul li {
   margin-right: 15px;
 }
-#main-header nav a {
+#main-header #main-nav a {
   text-decoration: none;
-  color: #2A2A2A;
-  padding: 10px 15px;
 }
-#main-header .nav-links {
+
+#main-nav-links {
   display: none;
 }
 
 #main-header.scrolled {
-  background-color: rgb(255, 255, 255);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+  background-color: var(--clr-bg-pri);
+  border-bottom: 1px solid var(--clr-border-enabled);
 }
 
-#main-header.hidden {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-}
-
-@media (min-width: 768px) {
-  header nav a:hover {
-    border-bottom: 1px solid #CF00A9;
-  }
-  header .nav-links {
-    display: inline;
-  }
-}
-/* hamburguer */
-#hamburguer-container {
+/*------------------------------------------ Hamburger Menu------------------------------------- */
+.hamburger {
+  display: block;
   position: fixed;
-  top: 20px;
-  right: 16px;
-  display: inline-block;
+  height: 28px;
+  right: 20px;
+  width: 30px;
   cursor: pointer;
   z-index: 1001;
 }
 
-.bar1, .bar3 {
+.hamburger {
+  position: fixed;
+  top: var(--space-m);
+  right: var(--space-xl);
+  display: inline-block;
+  z-index: 1001;
+}
+.hamburger .bar1, .hamburger .bar3 {
   width: 32px;
   height: 1.5px;
   background-color: #333;
@@ -98,13 +101,13 @@
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-
-.invis {
+.hamburger .invis {
   width: 32px;
   height: 0px;
   margin: 0px 0;
 }
 
+/* Hamburger Animation (Close State) */
 .change .bar1 {
   -webkit-transform: rotate(-45deg) translate(0px, 6px);
   transform: rotate(-45deg) translate(0px, 6px);
@@ -115,17 +118,108 @@
   transform: rotate(45deg) translate(0px, -6px);
 }
 
-/* Overlay base styling */
-#overlay {
+/*---------------------------------------Overlay Navigation-----------------------------------------*/
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-  z-index: 20;
+  background-color: var(--clr-bg-pri);
+  display: none;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 1000;
+}
+
+.overlay-content {
+  width: 100%;
+  margin-top: 20vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: var(--space-m);
+}
+.overlay-content ul {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  list-style: none;
+  gap: var(--space-xs);
+  padding: 0;
+}
+.overlay-content li {
+  width: 100%;
+  height: auto;
+  padding: 0 0;
+  margin: 0 auto;
+}
+.overlay-content a {
+  font-size: 1.5rem;
+  padding: 0 0;
+  margin: 0 auto;
+}
+.overlay-content .overlay-item {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: var(--space-s) var(--space-s);
+}
+
+/* Overlay Open State */
+.overlay.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  header nav a:hover {
+    color: var(--accent-40);
+  }
+  #main-nav-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-item-align: stretch;
+        -ms-grid-row-align: stretch;
+        align-self: stretch;
+  }
+  .hamburguer, #hamburger {
+    display: none;
+  }
 }
