--- a/src/assets/css/_pg-work.css
+++ b/src/assets/css/_pg-work.css
@@ -1,87 +1,1 @@
-.section-header {
-  max-width: 100%;
-  padding: 32px 16px 0px 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-}
-.section-header .button {
-  display: inline-block;
-  text-decoration: none;
-  color: #2A2A2A;
-}
-
-#work-section {
-  padding-top: 64px;
-  background-color: #FAFAFA;
-  width: 100%;
-}
-#work-section h2 {
-  font-family: "NeueMontreal";
-  font-weight: normal;
-  display: inline-block;
-  font-size: 2rem;
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-#work-section h3 {
-  font-family: "NeueMontreal";
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 150%; /* 2.25rem */
-  letter-spacing: -0.03rem;
-}
-#work-section p {
-  font-family: "NeueMontreal";
-  font-size: 1.25rem;
-  font-style: 100;
-  font-weight: 400;
-  line-height: 150%; /* 1.875rem */
-}
-#work-section ul {
-  -webkit-margin-after: 0px;
-          margin-block-end: 0px;
-  -webkit-margin-before: 0px;
-          margin-block-start: 0px;
-  -webkit-padding-start: 0px;
-          padding-inline-start: 0px;
-}
-#work-section li {
-  list-style: none;
-  margin: 0;
-  padding: 32px 0;
-  width: 100%;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-}
-#work-section figure {
-  -webkit-margin-after: 0;
-          margin-block-end: 0;
-  -webkit-margin-before: 0;
-          margin-block-start: 0;
-  -webkit-margin-end: 0;
-          margin-inline-end: 0;
-  -webkit-margin-start: 0;
-          margin-inline-start: 0;
-}
-#work-section img {
-  border-radius: 8px;
-}
-#work-section .project-thumbnail {
-  padding: 0px 16px 0px 16px;
-}
-#work-section .project-tags,
-#work-section .project-button {
-  display: none;
-}
+#work-section{margin-top:var(--space-xxxl)}
