--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -1,92 +1,94 @@
 /*------------------------------------------ Desktop Navigation ------------------------------------- */
 
 #main-header {
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 10;
-    transform: translateY(0);
-    background-color: rgba(255, 255, 255, 0.0);
-    border-bottom: 1px solid transparent;
-    transition: all 0.3s ease-in-out, transform 0.6s ease-in-out;
-    will-change: background-color, border-bottom, backdrop-filter, transform;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  transform: translateY(0);
+  background-color: rgba(255, 255, 255, 0.0);
+  border-bottom: 1px solid transparent;
+  transition: all 0.3s ease-in-out, transform 0.6s ease-in-out;
+  will-change: background-color, border-bottom, backdrop-filter, transform;
 
-    width: 100%;
-    height: 64px;
-    position: fixed;
+  width: 100%;
+  height: 64px;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+
+  #main-nav {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
 
-    #main-nav {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        align-self: stretch;
-
-        .logo {
-              z-index: 1001;
-        }
-
-        ul {
-            list-style: none;
-            display: flex;
-            gap: var(--space-xs);
-            padding: 0;
-            margin: 0;
-
-            li {
-                margin-right: 15px; // Adjust spacing as needed
-            }
-        }
-
-        a {
-            text-decoration: none;
-        }
+    .logo {
+      z-index: 1001;
     }
+
+    ul {
+      list-style: none;
+      display: flex;
+      gap: var(--space-xs);
+      padding: 0;
+      margin: 0;
+
+      li {
+        margin-right: 15px; // Adjust spacing as needed
+      }
+    }
+
+    a {
+      text-decoration: none;
+    }
+  }
 
 }
 
 #main-nav-links {
-    display: none;
+  display: none;
 }
 
 #main-header.scrolled {
-    background-color: var(--clr-bg-pri);
-    border-bottom: 1px solid var(--clr-border-enabled);
+  background-color: var(--clr-bg-pri);
+  border-bottom: 1px solid var(--clr-border-enabled);
 
 
 }
-  
+
 /*------------------------------------------ Hamburger Menu------------------------------------- */
 
 
 .hamburger {
-    display: block;
-    position: fixed;
-    height: 28px;
-    right: 20px;
-    width: 30px;
-    cursor: pointer;
-    z-index: 1001;
+  display: block;
+  position: fixed;
+  height: 28px;
+  right: 20px;
+  width: 30px;
+  cursor: pointer;
+  z-index: 1001;
 }
-  
-.hamburger  {
-    position: fixed;
-    top: var(--space-m);
-    right: var(--space-xl);
-    display: inline-block;
-    z-index: 1001;
 
-  .bar1, .bar3 {
+.hamburger {
+  position: fixed;
+  top: var(--space-m);
+  right: var(--space-xl);
+  display: inline-block;
+  z-index: 1001;
+
+  .bar1,
+  .bar3 {
     width: 32px;
     height: 1.5px;
     background-color: #333;
     margin: 6px 0;
     transition: 0.4s;
   }
+
   .invis {
     width: 32px;
     height: 0px;
@@ -95,79 +97,79 @@
 }
 
 /* Hamburger Animation (Close State) */
-  .change .bar1 {
-   -webkit-transform: rotate(-45deg) translate(0px, 6px);
-   transform: rotate(-45deg) translate(0px, 6px);
- }
-  .change .bar3 {
-   -webkit-transform: rotate(45deg) translate(0px, -6px);
-   transform: rotate(45deg) translate(0px, -6px);
- }
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(0px, 6px);
+  transform: rotate(-45deg) translate(0px, 6px);
+}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(0px, -6px);
+  transform: rotate(45deg) translate(0px, -6px);
+}
 
 
 /*---------------------------------------Overlay Navigation-----------------------------------------*/
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
 
-    background-color: var(--clr-bg-pri);
-    display: none;
-    justify-content: start;
-    align-items: center;
-    z-index: 1000;
-  }
+  background-color: var(--clr-bg-pri);
+  display: none;
+  justify-content: start;
+  align-items: center;
+  z-index: 1000;
+}
 
-  .overlay-content {
+.overlay-content {
+  width: 100%;
+  margin-top: 20vh;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-m);
+
+  ul {
     width: 100%;
-    margin-top: 20vh;
     display: flex;
     flex-direction: column;
-    gap: var(--space-m);
+    align-items: start;
+    list-style: none;
+    gap: var(--space-xs);
 
-    ul {
-      width: 100%;
-
-      display: flex;
-      flex-direction: column;
-      align-items: start;
-      list-style: none;
-      gap: var(--space-xs);
-
-      padding: 0;
-    }
-
-    li {
-      width: 100%;
-      height: auto;
-      padding: 0 0;
-      margin: 0 auto;
-    }
-
-    a {
-      font-size: 1.5rem;
-      padding: 0 0;
-      margin: 0 auto;
-    }
-
-    .overlay-item {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      padding: var(--space-s) var(--space-s);
-    }
-
+    padding: 0;
   }
-  
-  /* Overlay Open State */
-  .overlay.open {
+
+  li {
+    width: 100%;
+    height: auto;
+    padding: 0 0;
+    margin: 0 auto;
+  }
+
+  a {
+    font-size: 1.5rem;
+    padding: 0 0;
+    margin: 0 auto;
+  }
+
+  .overlay-item {
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    padding: var(--space-s) var(--space-xs) var(--space-s) 0;
   }
-  
+
+}
+
+/* Overlay Open State */
+.overlay.open {
+  display: flex;
+  flex-direction: column;
+}
+
 
 
 
@@ -175,25 +177,26 @@
 @media (min-width: 768px) {
 
   header {
-        nav {
-            a {
-                &:hover {
-                  color: var(--accent-40);
-                }
-            }
+    nav {
+      a {
+        &:hover {
+          color: var(--accent-40);
         }
+      }
     }
+  }
 
   #main-nav-links {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        align-self: stretch;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
   }
 
-  .hamburguer, #hamburger {
+  .hamburguer,
+  #hamburger {
     display: none;
   }
-    
+
 }
